--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "next-sitemap": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^22",
